--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-parent</artifactId>
-    	<version>2.0.0.RELEASE</version>
+    	<version>2.0.3.RELEASE</version>
 		<relativePath/>
 	</parent>
 
@@ -28,8 +28,8 @@
 		<redmic.rest-lib.version>0.6.0</redmic.rest-lib.version>
 
 		<!-- OTHERS -->
-		<kafka-stream.version>1.0.0</kafka-stream.version>
-		<confluent.version>4.0.0</confluent.version>
+		<kafka.version>1.1.0</kafka.version>
+		<confluent.version>4.1.0</confluent.version>
 		<powermock-tests-utils.version>1.6.6</powermock-tests-utils.version>
 		<commons-io.version>1.3.2</commons-io.version>
 		
@@ -44,7 +44,6 @@
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams</artifactId>
-			<version>${kafka-stream.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.kafka</groupId>
@@ -136,6 +135,13 @@
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>confluent</id>
+			<name>Confluent</name>
+			<url>https://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
