--- a/pom.xml
+++ b/pom.xml
@@ -2,26 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-   		<artifactId>spring-boot-starter-parent</artifactId>
-    	<version>2.1.0.RELEASE</version>
-		<relativePath/>
+		<groupId>es.redmic</groupId>
+		<artifactId>server-parent</artifactId>
+		<version>0.3.0</version>
+		<relativePath />
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>es.redmic.lib</groupId>
 	<artifactId>commands-lib</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8.0-feature-updateCI</version>
+	<version>0.8.0-feature-applyLicense</version>
 	<name>commands-lib</name>
 	
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<java.version>1.8</java.version>
-
 		<!-- REDMIC -->
 		<redmic.models.version>0.8.0</redmic.models.version>
 		<redmic.broker-lib.version>0.8.0</redmic.broker-lib.version>
@@ -32,9 +26,6 @@
 		<confluent.version>5.0.1</confluent.version>
 		<powermock-tests-utils.version>1.6.6</powermock-tests-utils.version>
 		<commons-io.version>1.3.2</commons-io.version>
-		
-		<!-- Version plugins -->
-		<jacoco.version>0.8.1</jacoco.version>
 	</properties>
 
 	<dependencies>
@@ -141,28 +132,4 @@
 			<url>https://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
-				<executions>
-					<execution>
-						<id>pre-unit-test</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>post-unit-test</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 </project>
