--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>es.redmic.lib</groupId>
 	<artifactId>commands-lib</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8.0-feature-applyLicense</version>
+	<version>0.9.0</version>
 	<name>commands-lib</name>
 	
 	<properties>
