--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 	<groupId>es.redmic.lib</groupId>
 	<artifactId>commands-lib</artifactId>
 	<packaging>jar</packaging>
-	<version>0.9.0</version>
+	<version>0.9.0-feature-atlasMicroservice</version>
 	<name>commands-lib</name>
 	
 	<properties>
 		<!-- REDMIC -->
 		<redmic.models.version>0.8.0</redmic.models.version>
-		<redmic.broker-lib.version>0.8.0</redmic.broker-lib.version>
+		<redmic.broker-lib.version>0.10.0-feature-atlasMicroservice</redmic.broker-lib.version>
 		<redmic.rest-lib.version>0.8.0</redmic.rest-lib.version>
 
 		<!-- OTHERS -->
