--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	
 	<properties>
 		<!-- REDMIC -->
-		<redmic.models.version>0.8.0</redmic.models.version>
+		<redmic.models.version>0.10.0-feature-cleanAtlasComponents</redmic.models.version>
 		<redmic.broker-lib.version>0.10.0-feature-atlasMicroservice</redmic.broker-lib.version>
 		<redmic.rest-lib.version>0.8.0</redmic.rest-lib.version>
 
