--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,11 @@
 		<redmic.broker-lib.version>0.10.0-feature-atlasMicroservice</redmic.broker-lib.version>
 		<redmic.rest-lib.version>0.10.0-feature-atlasMicroservice</redmic.rest-lib.version>
 		<redmic.user-settings-lib.version>0.1.0</redmic.user-settings-lib.version>
+		<redmic.user-settings-lib.version>0.1.0</redmic.user-settings-lib.version>
+		<redmic.test-utils.version>0.9.0-feature-atlasMicroservice</redmic.test-utils.version>
 		<!-- OTHERS -->
 		<kafka.version>2.0.1</kafka.version>
 		<confluent.version>5.0.1</confluent.version>
-		<powermock-tests-utils.version>1.6.6</powermock-tests-utils.version>
 		<commons-io.version>1.3.2</commons-io.version>
 	</properties>
 
@@ -109,16 +110,18 @@
 
 		<!-- Test -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<groupId>es.redmic.lib</groupId>
+			<artifactId>test-utils</artifactId>
+			<version>${redmic.test-utils.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>org.powermock.tests</groupId>
-			<artifactId>powermock-tests-utils</artifactId>
-			<version>${powermock-tests-utils.version}</version>
-			<scope>test</scope>
+			<groupId>es.redmic.lib</groupId>
+			<artifactId>user-settings-lib</artifactId>
+			<version>${redmic.user-settings-lib.version}</version>
+			<type>test-jar</type>
+  			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
